# taunter-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: config.json  custom.lua  users.json
src/: helper.rs  lib.rs  lua.rs  main.rs  tests.rs
