[package]
name = "taunter"
version = "0.5.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
rcon = "0.5.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde_json = "1.0"
serde = { version = "1.0.141", features = ["derive"] }
clap = { version = "4.0.27", features = ["derive"] }
rand = "0.8.4"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }