[package]
name = "taunter"
version = "0.12"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
rcon = "0.5.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde_json = "1.0"
serde = { version = "1.0.141", features = ["derive"] }
clap = { version = "4.0.27", features = ["derive"] }
rand = "0.8.4"
regex = "1.7.0"
lazy_static = "1.4.0"
discord-presence = "1.0.0"
mlua = { version = "0.9.5", features = ["async", "lua54"] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
